# edgebench

./: .gitignore  BENCHMARKS.md  LICENSE  Makefile  README.md  Roadmap.md  pyproject.toml
benchmarks/: baseline_codespaces_cpu.json
docs/: benchmarking.md  benchmarks.md
edgebench/: analyzer.py  cli.py  flops.py  profiler.py  report.py
models/: toy224.onnx  toy224.onnx.data  toy320.onnx  toy320.onnx.data  toy640.onnx  toy640.onnx.data
reports/: toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260226-070235.json  toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260226-075227.json  toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260226-080703.json  toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260226-111852.json  toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260226-112504.json  toy224__onnxruntime_cpu__b1__h224w224__r300__t1x1__20260227-083034.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260226-070235.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260226-075227.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260226-080703.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260226-111852.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260226-112504.json  toy320__onnxruntime_cpu__b1__h320w320__r300__t1x1__20260227-083034.json  toy320__onnxruntime_cpu__b1__r300__t1x1.json  toy640__onnxruntime_cpu__b1__h640w640__r300__t1x1__20260226-070235.json  toy640__onnxruntime_cpu__b1__h640w640__r300__t1x1__20260226-075227.json  toy640__onnxruntime_cpu__b1__h640w640__r300__t1x1__20260226-080703.json  (+9 more)
(+17 files in other folders)
